# Eagle-Eye-4.0

./: .gitignore  README.md  index.html  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/bgcoding/camera2api/: SuperResolutionTest.kt
app/src/androidTest/java/com/wangGang/eagleEye/: DehazingTest.kt  DenoiseTest.kt  ExampleInstrumentedTest.kt  ShadowTest.kt  SuperResolutionTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/model/: shadow_matte.onnx  shadow_removal.onnx
app/src/main/cpp/: CMakeLists.txt  camera2api.cpp  eagleEye.cpp
app/src/main/java/com/bgcoding/camera2api/: MainActivity.kt
app/src/main/java/com/bgcoding/camera2api/assessment/: InputImageEnergyReader.java
app/src/main/java/com/wangGang/eagleEye/: MainActivity.kt
app/src/main/res/drawable/: circle_shape.xml  ic_dehaze.xml  ic_denoising.xml  ic_flash_off.xml  ic_shadow_removal.xml  ic_super_resolution.xml  ic_timer_10s.xml  ic_timer_3s.xml  ic_timer_5s.xml  switch_camera.xml
app/src/main/res/layout/: activity_before_and_after_preview.xml  activity_camera_controller.xml  activity_main.xml  activity_photo.xml  activity_settings.xml  command_list_item.xml  fragment_camera.xml  item_algorithm.xml  list_item.xml  popup_menu.xml  popup_photo.xml  processing_order_list_item.xml  timer_options_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/java/com/wangGang/eagleEye/: ExampleUnitTest.kt
gradle/: libs.versions.toml
openCV/: build.gradle
openCV/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake
openCV/native/jni/abi-armeabi-v7a/: OpenCVModules-release.cmake
openCV/native/jni/abi-x86/: OpenCVConfig.cmake  OpenCVModules-release.cmake
openCV/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules-release.cmake
(+109 files in other folders)
